--- a/index.html
+++ b/index.html
@@ -135,6 +135,16 @@
         .passenger-info p span:first-child {
             font-weight: bold;
         }
+    .valet-info {
+    text-align: center;
+    font-weight: bold;
+    margin-bottom: 10px;
+    }
+        .event-date {
+    text-align: center;
+    font-weight: bold;
+    margin: 10px 0;
+}
        #qrcode {
         text-align: center;
         margin: 20px auto;
@@ -169,8 +179,6 @@
                 <div>
                     <div class="code">HMM</div>
                     <div class="city">Home</div>
-                    <div class="date">4th Aug, 2024</div>
-                    <div class="time">12:00pm</div>
                 </div>
                 <div class="airplane">
                     <svg viewBox="0 0 24 24" fill="#1a237e">
@@ -180,10 +188,9 @@
                 <div>
                     <div class="code">AOL</div>
                     <div class="city">Avyaan's Onederland</div>
-                    <div class="date">4th Aug, 2024</div>
-                    <div class="time">04:00pm</div>
                 </div>
             </div>
+            <div class="event-date">4th Aug, 2024</div>
             <div class="passenger-info">
                 <p><span>Passenger:</span> <span id="passengerName"></span></p>
                 <p><span>Flight:</span> <span>AJ307</span></p>
@@ -192,6 +199,7 @@
                 <p><span>Take off:</span> <span>12:00 PM</span></p>
                 <p><span>Landing:</span> <span>4:00 PM</span></p>
             </div>
+            <div class="valet-info">*Valet parking available at the venue</div>
             <div id="qrcode"></div>
             <div class="directions">
                 <a href="https://maps.app.goo.gl/e2TM2Nn3EPsovm6Y9" target="_blank">Get Directions</a>
