--- a/index.html
+++ b/index.html
@@ -135,26 +135,26 @@
         .passenger-info p span:first-child {
             font-weight: bold;
         }
-    .valet-info {
-    text-align: center;
-    font-weight: bold;
-    margin-bottom: 10px;
-    }
-        .event-date {
-    text-align: center;
-    font-weight: bold;
-    margin: 10px 0;
-}
-       #qrcode {
-        text-align: center;
-        margin: 20px auto;
-        width: 128px;
-        height: 128px;
+        .valet-info {
+            text-align: center;
+            font-weight: bold;
+            margin-bottom: 5px;
+            font-size: 14px;
         }
-
+        .event-date {
+            text-align: center;
+            font-weight: bold;
+            margin: 5px 0;
+        }
+        #qrcode {
+            text-align: center;
+            margin: 10px auto;
+            width: 128px;
+            height: 128px;
+        }
         #qrcode img {
-        display: block;
-        margin: 0 auto;
+            display: block;
+            margin: 0 auto;
         }
         .directions {
             text-align: center;
