--- a/index.html
+++ b/index.html
@@ -91,24 +91,20 @@
         .flight-info {
             display: flex;
             justify-content: space-between;
-            align-items: flex-start;
+            align-items: center;
             margin-bottom: 20px;
         }
         .flight-info div {
             text-align: center;
             flex: 1;
-            display: flex;
-            flex-direction: column;
         }
         .code {
             font-size: 36px;
             font-weight: bold;
-            line-height: 1;
         }
         .city {
             font-size: 18px;
             font-weight: bold;
-            line-height: 1.2;
         }
         .date, .time {
             font-size: 14px;
