--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
             <div class="valet-info">*Valet parking available at the venue</div>
             <div id="qrcode"></div>
             <div class="directions">
-                <a href="https://maps.app.goo.gl/e2TM2Nn3EPsovm6Y9" target="_blank">Get Directions</a>
+                <a href="https://maps.app.goo.gl/dXvsRbx8setJbvL27" target="_blank">Get Directions</a>
             </div>
             <button onclick="editName()">Edit Name</button>
         </div>
